--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 	<!-- google fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
-
+	
     <!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
@@ -45,9 +45,6 @@
 
 		</nav>
 
-
-
-
 	    <!-- Title -->
 
 	    <div class="row">
@@ -68,19 +65,31 @@
 
 	  <!-- Features -->
 
-	  <section id="features">
+	  <section id="features" class="container my-5 pt-5">
 
-	    <h3>Easy to use.</h3>
-	    <p>So easy to use, even your dog could do it.</p>
+		<div class="row">
 
-	    <h3>Elite Clientele</h3>
-	    <p>We have all the dogs, the greatest dogs.</p>
+			<div class="mb-5 features col-lg-4 ">
+				<i class="fas fa-check-circle mb-3"></i>
+				<h3 class="font-weight-bolder">Easy to use.</h3>
+				<p>So easy to use, even your dog could do it.</p>
+			</div>
 
-	    <h3>Guaranteed to work.</h3>
-	    <p>Find the love of your dog's life or your money back.</p>
+			<div class="mb-5 features col-lg-4 ">
+				<i class="fas fa-bullseye mb-3"></i>
+				<h3 class="font-weight-bolder">Elite Clientele</h3>
+				<p>We have all the dogs, the greatest dogs.</p>
+			</div>
+
+			<div class="mb-5 features col-lg-4">
+				<i class="fas fa-heart mb-3"></i>
+				<h3 class="font-weight-bolder">Guaranteed to work.</h3>
+				<p>Find the love of your dog's life or your money back.</p>
+			</div>
+
+		</div>
 
 	  </section>
-
 
 	  <!-- Testimonials -->
 
@@ -99,7 +108,7 @@
 
 	  <!-- Press -->
 
-	  <section id="press">
+	  <section id="press" class="pb-5">
 	    <img src="images/techcrunch.png" alt="tc-logo">
 	    <img src="images/tnw.png" alt="tnw-logo">
 	    <img src="images/bizinsider.png" alt="biz-insider-logo">
