--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	    <div class="row">
 		
-			<div class="col-lg-6">
+			<div class="col-lg-6 pb-5">
 	     		<h1 id="heading" class="mb-5">Meet new and interesting dogs nearby.</h1>
 	    		<button type="button" class="btn btn-dark mr-3 mb-3 btn-lg"> <i class="fab fa-apple"></i>&nbsp; Download</button>
 				<button type="button" class="btn btn-outline-light mr-3 mb-3 btn-lg"><i class="fab fa-google-play"></i> &nbsp;Download</button>
@@ -65,7 +65,7 @@
 
 	  <!-- Features -->
 
-	  <section id="features" class="container my-5 pt-5">
+	  <section id="features" class="container">
 
 		<div class="row">
 
@@ -95,13 +95,34 @@
 
 	  <section id="testimonials">
 
-	    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-	    <img src="images/dog-img.jpg" alt="dog-profile">
-	    <em>Pebbles, New York</em>
+		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+			  <div class="carousel-item active">
+				<h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+				<img src="images/dog-img.jpg" alt="dog-profile">
+				<em>Pebbles, New York</em>
+			  </div>
 
-	    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-	    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-	    <em>Beverly, Illinois</em> -->
+
+			  <div class="carousel-item">
+				<h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+	    		<img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+	    		<em>Beverly, Illinois</em> 
+			  </div>
+
+
+			</div>
+
+			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Next</span>
+			</a>
+		</div>
+
 
 	  </section>
 
@@ -119,35 +140,72 @@
 
 	  <!-- Pricing -->
 
-	  <section id="pricing">
+	  <section id="pricing" class="container-fluid">
 
 	    <h2>A Plan for Every Dog's Needs</h2>
-	    <p>Simple and affordable price plans for your and your dog.</p>
+		<p class="px-5">Simple and affordable price plans for your and your dog.</p>
+		
+		<div class="row p-5">
+			<div class="col-xs-12 col-md-6 col-lg-4 mb-5" >
+				
+				<div class="card text-center">
+					<div class="card-header">
+						<h3>Chihuahua</h3>
+					</div>
+					<div class="card-body">
+					<h2 class="card-title">Free</h2>
+					<p class="card-text">5 Matches Per Day</p>
+					<p class="card-text">10 Messages Per Day</p>
+					<p class="card-text">Unlimited App Usage</p>
+					<a href="#" class="btn btn-outline-dark w-100">Sign Up</a>
+					</div>
+			
+				</div>
+
+			</div>
+	
+
+			<div class="col-xs-12 col-md-6 col-lg-4 mb-5">
+
+				<div class="card text-center">
+					<div class="card-header">
+						<h3>Labrador</h3>
+					</div>
+					<div class="card-body">
+					  <h2 class="card-title">$49 / mo</h2>
+					  <p class="card-text">Unlimited Matches</p>
+					  <p class="card-text">Unlimited Messages</p>
+					  <p class="card-text">Unlimited App Usage</p>
+					  <a href="#" class="btn btn-dark w-100">Sign Up</a>
+					</div>
+			
+				</div>
 
 
-	    <h3>Chihuahua</h3>
-	    <h2>Free</h2>
-	    <p>5 Matches Per Day</p>
-	    <p>10 Messages Per Day</p>
-	    <p>Unlimited App Usage</p>
-	    <button type="button">Sign Up</button>
+			</div>
+
+			<div class="col-xs-12 col-lg-4 mb-5">
+
+				<div class="card text-center">
+					<div class="card-header">
+						<h3>Mastiff</h3>
+					</div>
+					<div class="card-body">
+					  <h2 class="card-title">$99 / mo</h2>
+					  <p class="card-text">Priority Listening</p>
+					  <p class="card-text">Unlimited Matches</p>
+					  <p class="card-text">Unlimited Messages</p>
+					  <p class="card-text">Unlimited App Usage</p>
+					  <a href="#" class="btn btn-dark w-100">Sign Up</a>
+					</div>
+			
+				</div>
 
 
-	    <h3>Labrador</h3>
-	    <h2>$49 / mo</h2>
-	    <p>Unlimited Matches</p>
-	    <p>Unlimited Messages</p>
-	    <p>Unlimited App Usage</p>
-	    <button type="button">Sign Up</button>
+			</div>
 
 
-	    <h3>Mastiff</h3>
-	    <h2>$99 / mo</h2>
-	    <p>Pirority Listing</p>
-	    <p>Unlimited Matches</p>
-	    <p>Unlimited Messages</p>
-	    <p>Unlimited App Usage</p>
-	    <button type="button">Sign Up</button>
+		</div>
 
 	  </section>
 
@@ -157,19 +215,26 @@
 	  <section id="cta">
 
 	    <h3>Find the True Love of Your Dog's Life Today.</h3>
-	    <button type="button">Download</button>
-	    <button type="button">Download</button>
+	    <button type="button" class="btn btn-dark m-3"> <i class="fab fa-apple"></i>&nbsp; Download</button>
+		<button type="button" class="btn btn-outline-light m-3"><i class="fab fa-google-play"></i> &nbsp;Download</button>
 
 	  </section>
 
 
-	  <!-- Footer -->
+	 <!-- Footer -->
 
-	  <footer id="footer">
+	<footer id="footer">
 
-	    <p>© Copyright 2018 TinDog</p>
+		<a href="https://www.twitter.com"><i class = "footer-icon fab fa-twitter"></i></a>
+		<a href="https://www.facebook.com"><i class = "footer-icon fab fa-facebook"></i></a>
+		<a href="https://www.instagram.com"><i class = "footer-icon fab fa-instagram"></i></a>
+		<a href="https://www.github.com"><i class = "footer-icon fab fa-github"></i></a>
+		<a href="mailto:pranjaljain584@gmail.com"><i class = "footer-icon fas fa-envelope"></i></a>
 
-	  </footer>
+
+		<p> &copy Copyright 2020 TinDog</p>
+
+	</footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
